syntax = "proto3";

package api.cart.v1;

option go_package = "cart/api/cart/v1;v1";

// 购物车
service Cart {
	rpc CreateCart (CreateCartRequest) returns (CartInfoReply); // 添加商品进购物车
	rpc UpdateCart (UpdateCartRequest) returns (CheckResponse); // 修改购物车商品数量
	rpc DeleteCart (DeleteCartRequest) returns (CheckResponse); // 删除购物车商品
	rpc ListCart (ListCartRequest) returns (ListCartReply); // 购物车商品列表
}

message CartInfo {
  int64 id = 1;
  int64 userId = 2;
  int64 goodsId = 3;
  string goodsSn = 4;
  string goodsName = 5;
  int64 skuId = 6;
  int64 goodsPrice = 7;
  int32 goodsNum = 8;
}
message CreateCartRequest {
 int64 id = 1;
 int64 userId = 2;
 int64 goodsId = 3;
 string goodsSn = 4;
 string goodsName = 5;
 int64 skuId = 6;
 int64 goodsPrice = 7;
 int32 goodsNum = 8;
}
message CartInfoReply {
  int64 id = 1;
  int64 userId = 2;
  int64 goodsId = 3;
  string goodsSn = 4;
  string goodsName = 5;
  int64 skuId = 6;
  int64 goodsPrice = 7;
  int32 goodsNum = 8;
}

message UpdateCartRequest {
  int64 id = 1;
  int32 goodsNum = 2;
}
message UpdateCartReply {}

message CheckResponse{
  bool success = 1;
}

message DeleteCartRequest {}
message DeleteCartReply {}

message GetCartRequest {}
message GetCartReply {}

message ListCartRequest {}
message ListCartReply {
  repeated CartInfo results = 1;
}